card time text alignment fix

--- a/style.css
+++ b/style.css
@@ -75,11 +75,13 @@ body {
 .card__time-left {
   display: flex;
   gap: 0.5rem;
+  align-items: center;
   color: #00fefb;
 }
 
 .card__time-right {
   display: flex;
+  align-items: center;
   gap: 0.5rem;
   color: #8eacd8;
 }
